# schnorr

./: .gitignore  CMakeLists.txt  README.md  fish.txt  main.cpp
include/: console.h  data_structures.h  factory.h  hacker.h  math.h  nmath.h  schnorr.h
src/: data_structures.cpp  factory.cpp  hacker.cpp  math.cpp  nmath.cpp  schnorr.cpp
